@@ -1,3 +1,9 @@
+2010-12-12  Lee Howard <faxguy@howardsilvan.com>
+
+	* tools/tiff2pdf.c: fix colors for images with RGBA 
+	interleaved data
+	http://bugzilla.maptools.org/show_bug.cgi?id=2250
+
 2010-12-11  Lee Howard <faxguy@howardsilvan.com>
 
 	* tools/tiff2pdf.c: remove invalid duplication for Lab 
